--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "^8.0.2",
         "laravel-workflow/laravel-workflow": ">=0.0.19",
-        "illuminate/support": "^9.0"
+        "illuminate/support": "^9.0|^10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
