--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,7 @@
 {
-    "/app.js": "/app.js?id=2cc20d4b72226021ffad651f80cc7963",
+    "/app.js": "/app.js?id=2d746dcd282d0f999e7bd41a3187dc71",
     "/app-dark.css": "/app-dark.css?id=f522096d329c54701f099916e0416c38",
     "/app.css": "/app.css?id=768ca5ff3a1358fcfb02f40296b64d0b",
     "/img/favicon.png": "/img/favicon.png?id=7c006241b093796d6abfa3049df93a59",
-    "/img/sprite.svg": "/img/sprite.svg?id=afc4952b74895bdef3ab4ebe9adb746f",
-    "/img/waterline.svg": "/img/waterline.svg?id=904d5b5185fefb09035384e15bfca765"
+    "/img/sprite.svg": "/img/sprite.svg?id=afc4952b74895bdef3ab4ebe9adb746f"
 }
