--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.4",
+        "orchestra/testbench": "8.9.1",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
