--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,8 @@ networks:
     sail:
         driver: bridge
 volumes:
+    sail-mssql:
+        driver: local
     sail-mysql:
         driver: local
     sail-pgsql:
