--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,15 +31,16 @@ services:
             - '${FORWARD_DB_PORT:-1433}:1433'
         environment:
             ACCEPT_EULA: 'Y'
-            MSSQL_SA_PASSWORD: 'password'
+            MSSQL_SA_PASSWORD: 'P@ssword'
             DB_USER: 'testing'
             DB_NAME: 'testing'
         volumes:
             - 'sail-mssql:/var/lib/mssql/data'
+            - './docker/create-testing-database-mssql.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
             - sail
         healthcheck:
-            test: /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "password" -Q "SELECT 1" -b -o /dev/null
+            test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-S", "localhost", "-U", "sa", "-P", "P@ssword", "-Q", "SELECT 1", "-b", "-o", "/dev/null"]
             interval: 10s
             timeout: 3s
             retries: 10
@@ -57,7 +58,7 @@ services:
             MYSQL_ALLOW_EMPTY_PASSWORD: 1
         volumes:
             - 'sail-mysql:/var/lib/mysql'
-            - './docker/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+            - './docker/create-testing-database-mysql.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
             - sail
         healthcheck:
@@ -75,7 +76,7 @@ services:
             POSTGRES_PASSWORD: 'password'
         volumes:
             - 'sail-pgsql:/var/lib/postgresql/data'
-            - './docker/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sql'
+            - './docker/create-testing-database-pgsql.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sql'
         networks:
             - sail
         healthcheck:
