--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
     ],
     "require": {
         "php": "^8.0.2",
-        "laravel-workflow/laravel-workflow": ">=0.0.19",
-        "illuminate/support": "^9.0|^10.0"
+        "illuminate/support": "^9.0|^10.0",
+        "laravel-workflow/laravel-workflow": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.4",
+        "orchestra/testbench": "8.9.1",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
@@ -27,6 +28,13 @@
         "psr-4": {
             "Waterline\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "test": "composer test-mssql && composer test-mysql && composer test-pgsql && composer test-sqlite",
+        "test-mssql": "vendor/bin/phpunit --testdox --configuration=phpunit-mssql.xml",
+        "test-mysql": "vendor/bin/phpunit --testdox --configuration=phpunit-mysql.xml",
+        "test-pgsql": "vendor/bin/phpunit --testdox --configuration=phpunit-pgsql.xml",
+        "test-sqlite": "vendor/bin/phpunit --testdox --configuration=phpunit-sqlite.xml"
     },
     "extra": {
         "laravel": {
