--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "jenssegers/mongodb": "dev-master",
+        "jenssegers/mongodb": "^3.9",
         "mockery/mockery": "^1.4.4",
-        "orchestra/testbench": "8.9.1",
+        "orchestra/testbench": "^7.29",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
