--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,16 @@
     ],
     "require": {
         "php": "^8.0.2",
-        "illuminate/support": "^9.0|^10.0|^11.0",
+        "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
         "laravel-workflow/laravel-workflow": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "jenssegers/mongodb": "^3.9",
         "mockery/mockery": "^1.4.4",
-        "mongodb/mongodb": "1.11",
-        "orchestra/testbench": "^7.29",
-        "phpunit/phpunit": "^9.5.10"
+        "mongodb/mongodb": "1.11|^1.20",
+        "orchestra/testbench": "^7.29|^10.0",
+        "phpunit/phpunit": "^9.5.10|^11.5.3"
     },
     "autoload": {
         "psr-4": {
