--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -59,6 +59,17 @@ jobs:
       with:
           fetch-depth: 10
 
+    - name: Install mssql-tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y curl gnupg2
+        curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+        curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
+        sudo apt-get update
+        sudo ACCEPT_EULA=Y apt-get install -y mssql-tools unixodbc-dev
+        echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
+        source ~/.bashrc
+
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
 
@@ -76,7 +87,7 @@ jobs:
 
     - name: Create databases
       run: |
-        /opt/mssql-tools/bin/sqlcmd -U "sa" -P "P@ssword" -Q "CREATE DATABASE testing;"
+        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "P@ssword" -Q "CREATE DATABASE testing;"
 
     - name: Run test suite
       run: composer test
