--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.35",
         "phpunserialize": "1.*",
+        "playwright": "^1.54.1",
         "popper.js": "^1.12",
         "prismjs": "^1.29.0",
+        "puppeteer": "^24.12.1",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.26.3",
         "sass-loader": "^11.0.1",
