--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -4,10 +4,11 @@ user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
-[program:php]
-command=/usr/bin/php -d variables_order=EGPCS /var/www/html/artisan serve --host=0.0.0.0 --port=80
+# Keep container running - dummy process
+[program:keep-alive]
+command=/bin/bash -c "while true; do sleep 3600; done"
 user=sail
-environment=LARAVEL_SAIL="1"
+autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
