--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,6 @@ yarn-error.log
 /.idea
 /.vscode
 .DS_Store
-debug-screenshot.png
-debug-dashboard.html
+.github/tools/debug-screenshot.png
+.github/tools/debug-dashboard.html
 
