--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -25,7 +25,7 @@ RUN apt-get update \
        php8.2-imap php8.2-mysql php8.2-mbstring \
        php8.2-xml php8.2-zip php8.2-bcmath php8.2-soap \
        php8.2-intl php8.2-readline \
-       php8.2-ldap php8.2-mongodb \
+       php8.2-ldap \
        php8.2-msgpack php8.2-igbinary php8.2-redis php8.2-swoole \
        php8.2-memcached php8.2-pcov php8.2-xdebug \
     && curl -sLS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer \
@@ -48,7 +48,11 @@ RUN apt-get update \
     && echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc \
     && echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> /etc/profile.d/mssql.sh \
     && apt-get install -y php-pear php8.2-xml php8.2-dev \
+    && apt-get remove --purge -y php8.2-mongodb || true \
     && pecl channel-update pecl.php.net \
+    && pecl install mongodb-1.15.0 \
+    && echo "extension=mongodb.so" > /etc/php/8.2/mods-available/mongodb.ini \
+    && phpenmod mongodb \
     && pecl install sqlsrv \
     && pecl install pdo_sqlsrv \
     && echo "extension=sqlsrv.so" > /etc/php/8.2/mods-available/sqlsrv.ini \
