--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,3 @@
-// https://aka.ms/devcontainer.json
 {
 	"name": "Existing Docker Compose (Extend)",
 	"dockerComposeFile": [
@@ -9,18 +8,8 @@
 	"settings": {},
 	"extensions": [
         "editorconfig.editorconfig",
-        "ryannaddy.laravel-artisan",
-        "amiralizadeh9480.laravel-extra-intellisense",
-        "stef-k.laravel-goto-controller",
-        "codingyu.laravel-goto-view",
-        "mikestead.dotenv",
-        "christian-kohler.path-intellisense",
-        "esbenp.prettier-vscode",
-        "CoenraadS.bracket-pair-colorizer"
 	],
 	"remoteUser": "sail",
-	"postCreateCommand": "chown -R 1000:1000 /var/www/html && composer install && php artisan key:generate",
-	"forwardPorts": [80]
-	// "runServices": [],
-	// "shutdownAction": "none",
+	"postCreateCommand": "chown -R 1000:1000 /var/www/html && composer install",
+	"forwardPorts": [8000]
 }
