--- a/package.json
+++ b/package.json
@@ -10,31 +10,31 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "apexcharts": "^3.36.1",
-        "axios": "^0.21.1",
-        "bootstrap": "^4.3.1",
-        "chart.js": "^2.5.0",
-        "highlight.js": "^10.4.1",
-        "jquery": "^3.5.0",
-        "laravel-mix": "^6.0.13",
-        "lodash": "^4.17.19",
-        "md5": "^2.2.1",
-        "moment": "^2.29.4",
-        "moment-timezone": "^0.5.35",
+        "apexcharts": "^3.54.1",
+        "axios": "^1.7.7",
+        "bootstrap": "^4.6.2",
+        "chart.js": "^2.9.4",
+        "highlight.js": "^11.10.0",
+        "jquery": "^3.7.1",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17.21",
+        "md5": "^2.3.0",
+        "moment": "^2.30.1",
+        "moment-timezone": "^0.5.45",
         "phpunserialize": "1.*",
-        "popper.js": "^1.12",
+        "popper.js": "^1.16.1",
         "prismjs": "^1.29.0",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.26.3",
-        "sass-loader": "^11.0.1",
-        "sql-formatter": "^4.0.2",
-        "sweetalert2": "11.4.8",
-        "vue": "^2.5.7",
-        "vue-apexcharts": "^1.6.2",
-        "vue-json-pretty": "^1.4.1",
-        "vue-loader": "^15.9.6",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.78.0",
+        "sass-loader": "^14.2.1",
+        "sql-formatter": "^15.4.2",
+        "sweetalert2": "^11.14.1",
+        "vue": "^2.7.16",
+        "vue-apexcharts": "1.6.2",
+        "vue-json-pretty": "^1.9.4",
+        "vue-loader": "^15.11.1",
         "vue-prism-editor": "^1.3.0",
-        "vue-router": "^3.0.1",
-        "vue-template-compiler": "^2.5.21"
+        "vue-router": "^3.6.5",
+        "vue-template-compiler": "^2.7.16"
     }
 }
