--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "mongodb/laravel-mongodb": "^3.9",
         "mongodb/mongodb": "1.11",
         "orchestra/testbench": "^7.29",
+        "orchestra/workbench": "^7.29",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
@@ -28,16 +29,33 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Waterline\\Tests\\": "tests/"
+            "Waterline\\Tests\\": "tests/",
+            "Workbench\\App\\": "workbench/app/",
+            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
         }
     },
     "scripts": {
+        "post-autoload-dump": [
+            "@clear",
+            "@prepare",
+            "@php ./vendor/bin/testbench package:discover --ansi"
+        ],
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "@build",
+            "@php vendor/bin/testbench serve --ansi"
+        ],
+        "build": "@php vendor/bin/testbench workbench:build --ansi",
         "test": "composer test-mongo && composer test-mssql && composer test-mysql && composer test-pgsql && composer test-sqlite",
+        "test-all": "composer test-mongo && composer test-mssql && composer test-mysql && composer test-pgsql && composer test-sqlite",
         "test-mongo": "vendor/bin/phpunit --testdox --configuration=phpunit-mongo.xml",
         "test-mssql": "vendor/bin/phpunit --testdox --configuration=phpunit-mssql.xml",
         "test-mysql": "vendor/bin/phpunit --testdox --configuration=phpunit-mysql.xml",
         "test-pgsql": "vendor/bin/phpunit --testdox --configuration=phpunit-pgsql.xml",
-        "test-sqlite": "vendor/bin/phpunit --testdox --configuration=phpunit-sqlite.xml"
+        "test-sqlite": "vendor/bin/phpunit --testdox --configuration=phpunit-sqlite.xml",
+        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi"
     },
     "extra": {
         "laravel": {
